# rocket-diesel-rest-boilerplate

./: .env  Cargo.toml  diesel.toml
migrations/2020-08-14-180820_init_schema/: down.sql  up.sql
server/: db.rs  main.rs
server/web/: library.rs  mod.rs
shared/: lib.rs  settings.rs
shared/linux/: directories.rs
shared/models/: library.rs  mod.rs  schema.rs  types.rs
shared/platform/: mod.rs
shared/platform/macos/: directories.rs
shared/platform/windows/: directories.rs
