[package]
name = "movie"
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "movie"
path = "client/main.rs"

[[bin]]
name = "movied"
path = "server/main.rs"

[lib]
name = "movie"
path = "shared/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "^0.4", features = ["serde"] }
chrono-english = "^0.1.0"
config = "^0.10"
dirs = "3"
serde = "^1.0"
serde_json = "^1.0"
serde_yaml = "^0.8"
serde_derive = "^1.0"
log = "0.4"
simplelog = { version = "0.8", default-features = false }
strum = "^0.19"
strum_macros = "^0.19"
async-std = { version = "1", features = ["attributes", "unstable"] }

crossterm = "^0.17"
dialoguer = "^0.3"
comfy-table= "^1"
structopt = "0.3"

diesel = { version = "^1", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "^1", features = ["postgres"]}
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" , features=['json', 'serve', 'diesel_postgres_pool']}

[target.'cfg(not(windows))'.dependencies]
users = "^0.10"
nix = "^0.17"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
procfs = "^0.8"

[target.'cfg(target_os = "macos")'.dependencies]
psutil = "^3"
